2008-09-21  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/evolution.c (get_message_encoding):
	Remove debug g_print()

2008-09-21  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/evolution.c (get_message_encoding)
	(get_text_for_mbox): Try to convert message contents to UTF8 based on
	the charset specified by the Content-Type header.

2008-09-21  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-service.c (service_finalize): Plug a
	leak.

2008-09-21  Carlos Garnacho  <carlos@imendio.com>

	* data/services/file.metadata: Added missing description for
	File:Language.

2008-09-21  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (item_create_or_update)
	(item_delete): Show item uri instead of file path in debug messages.

2008-09-21  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata.c (tracker_metadata_insert):
	Provide a more verbose error if some field name isn't defined in the
	ontology.

2008-09-20  Martyn Russell  <martyn@imendio.com>

	*.[ch]: Tabbify code.

2008-09-20  Martyn Russell  <martyn@imendio.com>

	*.[ch]: Removed all trailing whitespace.

2008-09-20  Ivan Frade  <ivan.frade@nokia.com>

	* tests/tracker-indexer/Makefile.am: Revert previous change. Using
	symbolic links instead of BUILD_SOURCES var.
	
2008-09-19  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer.c: Call service_def
	'service' and field_def 'field'.

2008-09-19  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-processor.c: Reduce the size of the list of
	files we send to the indexer down to 1000 from 5000. DBus isn't
	supposed to be optimized for > 4kb chunks.

	* src/tracker-indexer/tracker-indexer.c: Make sure we remove all
	entries in the hash table we use for mtime cache on parent
	directories when we have finished indexing. Use Quarks to know
	what the current module is instead of strdup() every time we